<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="likes_description">Likes</string>
    <string name="shares_description">Shares</string>
    <string name="views_description">Views</string>
    <string name="options_description">Options</string>
    <string name="save_description">Save</string>
    <string name="share_intent_title">Share</string>
    <string name="share_intent_empty_text_error">This text is blank</string>
    <string name="content_empty_text_error">This text is blank</string>

    <string name="description_post_edit_submit">Submit edit</string>

    <string name="sample_text">Обратите внимание на блок с количеством просмотров. С ним есть небольшая проблема (поскольку он расположен справа). Если количество просмотров вырастет, например, до 500, то есть целых два варианта: Отталкиваться от текста (т.е. установить фиксированное расстояние от текста до границы родителя, а саму иконку приклеить к границе текста) Оставить достаточное количество места, чтобы уместилось и 500 и 1К, тогда на всех карточках положение этого блока будет одинаковым</string>
    <string name="no_value">0</string>

    <string name="post_text">Post Text</string>

    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>

    <string name="choose_player">Choose video player</string>
    <string name="add_post">Add post</string>

    <string name="google_play_unavailable">Google API Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>

    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_newpost">%1$s posted a new post:</string>
</resources>