<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/post_item"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_netology_48dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/small_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        android:textColor="@color/common_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        android:textColor="@color/common_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.App.Button.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:contentDescription="@string/options_description"
        app:backgroundTint="#FFFFFF"
        app:icon="@drawable/ic_options_24dp"
        app:iconTint="@color/common_color"
        app:strokeColor="@android:color/transparent"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,date,options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/video"
        android:layout_marginTop="@dimen/small_spacing"
        android:textColor="@color/common_color"
        tools:text="@tools:sample/lorem" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postText" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/likePic"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="@dimen/material_count_size"
        android:layout_height="wrap_content"
        android:button="@drawable/ic_like_24dp"
        android:checkable="true"
        android:textAlignment="textStart"
        android:contentDescription="@string/likes_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomBarrier"
        tools:text="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sharesPic"
        style="@style/Widget.AppTheme.PostIconBar"
        android:layout_width="@dimen/material_count_size"
        android:layout_height="wrap_content"
        android:button="@drawable/ic_share_24dp"
        android:textAlignment="textStart"
        android:contentDescription="@string/shares_description"
        app:icon="@drawable/ic_share_24dp"
        app:layout_constraintBottom_toBottomOf="@id/likePic"
        app:layout_constraintTop_toTopOf="@id/likePic"
        app:layout_constraintStart_toEndOf="@id/likePic"
        app:layout_constraintEnd_toStartOf="@+id/viewsPic"
        app:layout_constraintHorizontal_bias="0.0"
        tools:text="0" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsPic"
        style="@style/Widget.AppTheme.PostIconBar"
        android:layout_width="@dimen/material_count_size"
        android:layout_height="wrap_content"
        android:button="@drawable/ic_visibility_24dp"
        app:icon="@drawable/ic_visibility_24dp"
        android:textAlignment="textStart"
        android:layout_marginEnd="@dimen/small_spacing"
        android:contentDescription="@string/views_description"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@id/likePic"
        app:layout_constraintTop_toTopOf="@id/likePic"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="0" />

    <FrameLayout
        android:id="@+id/video"
        android:layout_width="@dimen/width_video_pic"
        android:layout_height="@dimen/height_video_pic"
        android:background="@drawable/video"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        app:layout_constraintBottom_toTopOf="@id/postText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></FrameLayout>

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_play_24dp"
        app:layout_constraintEnd_toEndOf="@id/video"
        app:layout_constraintStart_toStartOf="@id/video"
        app:layout_constraintTop_toTopOf="@id/video"
        app:layout_constraintBottom_toBottomOf="@id/video" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="video,playButton"
        android:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>